Modify header and style

--- a/global/header.html
+++ b/global/header.html
@@ -1,5 +1,5 @@
 <div class="navbar navbar-inverse">
-    <a class="navbar-brand" href="./home">MyProject</a>
+    <a class="navbar-brand" href=".#!/home">MyProject</a>
     <ul class="nav navbar-nav flex-container">
         <li class="">
             <a href="#!/home">Home</a>
