--- a/global/header.html
+++ b/global/header.html
@@ -7,6 +7,9 @@
         <li class="">
             <a href="#!/data">Data</a>
         </li>
+        <li class="">
+            <a href="#!/result">Random</a>
+        </li>
         <li>
             <a href="#!/contact">Contact</a>
         </li>
