--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <noscript>Please enable javascript first.</noscript>
         <div ng-include="'./global/header.html'"></div>
         
-        <main id="fade1" ng-view></main>
+        <main ng-view></main>
         
         <div ng-include="'./global/footer.html'"></div>
     </body>
