contactus form added

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <noscript>Please enable javascript first.</noscript>
         <div ng-include="'./global/header.html'"></div>
         
-        <main ng-view></main>
+        <main ng-view class="flex-container flex-ai-center"></main>
         
         <div ng-include="'./global/footer.html'"></div>
     </body>
